[package]
name = "js-wasm-tools"
authors = ["Dominic Elm"]
version = "0.1.0"
license = "MIT"
edition = "2021"

[features]
default = []

[lib]
crate-type = ["cdylib"]

[dependencies]
wat = "1.0.51"
wasmprinter = "0.2.43"
wasmparser = "0.95.0"
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
serde = { version = "1.0.147", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
console_error_panic_hook = { version = "0.1" }
web-sys = { version = "0.3.60", features = ["console"] }

[profile.release]
lto = true
opt-level = "s"
