[package]
name = "js-wasm-tools"
authors = ["Dominic Elm"]
version = "0.1.0"
license = "MIT"
edition = "2021"

[features]
default = []

[lib]
crate-type = ["cdylib"]

[dependencies]
wat = "1.0.84"
wasmprinter = "0.2.77"
wasmparser = "0.120.0"
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
serde = { version = "1.0.195", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
console_error_panic_hook = { version = "0.1" }
web-sys = { version = "0.3.66", features = ["console"] }

[profile.release]
lto = true
opt-level = "s"
